lib/antlr/WynntilsParser.ts
// Generated from lib/Wynntils.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import WynntilsListener from "./WynntilsListener.js";
import WynntilsVisitor from "./WynntilsVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class WynntilsParser extends Parser {
	public static readonly LCURLY = 1;
	public static readonly RCURLY = 2;
	public static readonly LPAREN = 3;
	public static readonly RPAREN = 4;
	public static readonly SEMI = 5;
	public static readonly BOOLEAN = 6;
	public static readonly STRING = 7;
	public static readonly NUMBER = 8;
	public static readonly IDENTIFIER = 9;
	public static readonly WS = 10;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_script = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_functionCall = 2;
	public static readonly RULE_argList = 3;
	public static readonly RULE_literal = 4;
	public static readonly literalNames: (string | null)[] = [ null, "'{'", 
                                                            "'}'", "'('", 
                                                            "')'", "';'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "LCURLY", 
                                                             "RCURLY", "LPAREN", 
                                                             "RPAREN", "SEMI", 
                                                             "BOOLEAN", 
                                                             "STRING", "NUMBER", 
                                                             "IDENTIFIER", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"script", "expression", "functionCall", "argList", "literal",
	];
	public get grammarFileName(): string { return "Wynntils.g4"; }
	public get literalNames(): (string | null)[] { return WynntilsParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return WynntilsParser.symbolicNames; }
	public get ruleNames(): string[] { return WynntilsParser.ruleNames; }
	public get serializedATN(): number[] { return WynntilsParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, WynntilsParser._ATN, WynntilsParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public script(): ScriptContext {
		let localctx: ScriptContext = new ScriptContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, WynntilsParser.RULE_script);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 10;
			this.match(WynntilsParser.LCURLY);
			this.state = 11;
			this.expression();
			this.state = 12;
			this.match(WynntilsParser.RCURLY);
			this.state = 13;
			this.match(WynntilsParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, WynntilsParser.RULE_expression);
		try {
			this.state = 18;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 15;
				this.functionCall();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 16;
				this.match(WynntilsParser.STRING);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 17;
				this.literal();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let localctx: FunctionCallContext = new FunctionCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, WynntilsParser.RULE_functionCall);
		let _la: number;
		try {
			this.state = 27;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				localctx = new NoArgsFunctionContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 20;
				this.match(WynntilsParser.IDENTIFIER);
				}
				break;
			case 2:
				localctx = new ParenFunctionContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 21;
				this.match(WynntilsParser.IDENTIFIER);
				this.state = 22;
				this.match(WynntilsParser.LPAREN);
				this.state = 24;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 960) !== 0)) {
					{
					this.state = 23;
					this.argList();
					}
				}

				this.state = 26;
				this.match(WynntilsParser.RPAREN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public argList(): ArgListContext {
		let localctx: ArgListContext = new ArgListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, WynntilsParser.RULE_argList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 29;
			this.expression();
			this.state = 34;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===5) {
				{
				{
				this.state = 30;
				this.match(WynntilsParser.SEMI);
				this.state = 31;
				this.expression();
				}
				}
				this.state = 36;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let localctx: LiteralContext = new LiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, WynntilsParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 37;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 448) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!WynntilsParser.__ATN) {
			WynntilsParser.__ATN = new ATNDeserializer().deserialize(WynntilsParser._serializedATN);
		}

		return WynntilsParser.__ATN;
	}


	static DecisionsToDFA = WynntilsParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ScriptContext extends ParserRuleContext {
	constructor(parser?: WynntilsParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public LCURLY(): TerminalNode {
		return this.getToken(WynntilsParser.LCURLY, 0);
	}
	public expression(): ExpressionContext {
		return this.getTypedRuleContext(ExpressionContext, 0) as ExpressionContext;
	}
	public RCURLY(): TerminalNode {
		return this.getToken(WynntilsParser.RCURLY, 0);
	}
	public EOF(): TerminalNode {
		return this.getToken(WynntilsParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return WynntilsParser.RULE_script;
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterScript) {
	 		listener.enterScript(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitScript) {
	 		listener.exitScript(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitScript) {
			return visitor.visitScript(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ExpressionContext extends ParserRuleContext {
	constructor(parser?: WynntilsParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public functionCall(): FunctionCallContext {
		return this.getTypedRuleContext(FunctionCallContext, 0) as FunctionCallContext;
	}
	public STRING(): TerminalNode {
		return this.getToken(WynntilsParser.STRING, 0);
	}
	public literal(): LiteralContext {
		return this.getTypedRuleContext(LiteralContext, 0) as LiteralContext;
	}
    public get ruleIndex(): number {
    	return WynntilsParser.RULE_expression;
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterExpression) {
	 		listener.enterExpression(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitExpression) {
	 		listener.exitExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitExpression) {
			return visitor.visitExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionCallContext extends ParserRuleContext {
	constructor(parser?: WynntilsParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return WynntilsParser.RULE_functionCall;
	}
	public override copyFrom(ctx: FunctionCallContext): void {
		super.copyFrom(ctx);
	}
}
export class ParenFunctionContext extends FunctionCallContext {
	constructor(parser: WynntilsParser, ctx: FunctionCallContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(WynntilsParser.IDENTIFIER, 0);
	}
	public LPAREN(): TerminalNode {
		return this.getToken(WynntilsParser.LPAREN, 0);
	}
	public RPAREN(): TerminalNode {
		return this.getToken(WynntilsParser.RPAREN, 0);
	}
	public argList(): ArgListContext {
		return this.getTypedRuleContext(ArgListContext, 0) as ArgListContext;
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterParenFunction) {
	 		listener.enterParenFunction(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitParenFunction) {
	 		listener.exitParenFunction(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitParenFunction) {
			return visitor.visitParenFunction(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
export class NoArgsFunctionContext extends FunctionCallContext {
	constructor(parser: WynntilsParser, ctx: FunctionCallContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public IDENTIFIER(): TerminalNode {
		return this.getToken(WynntilsParser.IDENTIFIER, 0);
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterNoArgsFunction) {
	 		listener.enterNoArgsFunction(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitNoArgsFunction) {
	 		listener.exitNoArgsFunction(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitNoArgsFunction) {
			return visitor.visitNoArgsFunction(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgListContext extends ParserRuleContext {
	constructor(parser?: WynntilsParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public expression_list(): ExpressionContext[] {
		return this.getTypedRuleContexts(ExpressionContext) as ExpressionContext[];
	}
	public expression(i: number): ExpressionContext {
		return this.getTypedRuleContext(ExpressionContext, i) as ExpressionContext;
	}
	public SEMI_list(): TerminalNode[] {
	    	return this.getTokens(WynntilsParser.SEMI);
	}
	public SEMI(i: number): TerminalNode {
		return this.getToken(WynntilsParser.SEMI, i);
	}
    public get ruleIndex(): number {
    	return WynntilsParser.RULE_argList;
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterArgList) {
	 		listener.enterArgList(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitArgList) {
	 		listener.exitArgList(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitArgList) {
			return visitor.visitArgList(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LiteralContext extends ParserRuleContext {
	constructor(parser?: WynntilsParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public BOOLEAN(): TerminalNode {
		return this.getToken(WynntilsParser.BOOLEAN, 0);
	}
	public NUMBER(): TerminalNode {
		return this.getToken(WynntilsParser.NUMBER, 0);
	}
	public STRING(): TerminalNode {
		return this.getToken(WynntilsParser.STRING, 0);
	}
    public get ruleIndex(): number {
    	return WynntilsParser.RULE_literal;
	}
	public enterRule(listener: WynntilsListener): void {
	    if(listener.enterLiteral) {
	 		listener.enterLiteral(this);
		}
	}
	public exitRule(listener: WynntilsListener): void {
	    if(listener.exitLiteral) {
	 		listener.exitLiteral(this);
		}
	}
	// @Override
	public accept<Result>(visitor: WynntilsVisitor<Result>): Result {
		if (visitor.visitLiteral) {
			return visitor.visitLiteral(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
